message(STATUS "In Utility/Grid_Scripts")

add_executable(cpp_bp cpp_bp.f90)
add_executable(cpp cpp.f90)
add_executable(arctic_stereo arctic_stereo.f90)
add_executable(grid_spring grid_spring.f90)
add_executable(grid_subsampler grid_subsampler.f)
add_executable(interpolate_depth_structured2 interpolate_depth_structured2.f90)
add_executable(interpolate_unstructured interpolate_unstructured.f90)
add_executable(periodic_grid periodic_grid.f90)
add_executable(gen_boundary_global  gen_boundary_global.f90)
add_executable(check_lonlat_grid check_lonlat_grid.f90)
add_executable(mergegrid5 mergegrid5.f90)

target_link_libraries(mergegrid5 utillib)
target_include_directories(mergegrid5 PRIVATE ${CMAKE_CURRENT_BINARY_DIR}/../UtilLib)
add_dependencies(mergegrid5 utillib)
