message(STATUS "In /Utility NetCDF_LIBS ${NetCDFLIBS}")
add_executable( check_openbnd check_openbnd.f90 )
add_executable( gen_hdif gen_hdif.f90 )
add_executable( gen_nudge gen_nudge.f90 )
add_executable( convert_3Dth_nc convert_3Dth_nc.f90 )
add_executable( viz_source_sink viz_source_sink.f90 )
#add_executable( create_dummy_zcor create_dummy_zcor.f90)
add_executable( gen_vqs_1 gen_vqs_1.f90 )
add_executable( gen_vqs_2 gen_vqs_2.f90 )
add_executable( gen_vqs_2masters gen_vqs_2masters.f90 )

#target_link_libraries (create_dummy_zcor utillib )
target_link_libraries (gen_vqs_1 utillib )
target_link_libraries (gen_vqs_2 utillib )
target_link_libraries (gen_vqs_2masters utillib )
target_link_libraries (convert_3Dth_nc utillib ${NetCDFLIBS} ${HDF5_LIBRARIES})

#add_dependencies(utility check_openbnd gen_hdif gen_vqs_1 gen_vqs_2 gen_vqs_2masters gen_nudge convert_3Dth_nc viz_source_sink create_dummy_zcor)
add_dependencies(utility check_openbnd gen_hdif gen_vqs_1 gen_vqs_2 gen_vqs_2masters gen_nudge convert_3Dth_nc viz_source_sink)

